# MOF_ChemUnity

./: AUTHORS.rst  CONTRIBUTING.rst  ChemUnity_Extraction.ipynb  ChemUnity_Matching.ipynb  ChemUnity_Synthesis.ipynb  ChemUnity_Visualizations.ipynb  General_Extraction_Benchmark.ipynb  LICENSE_CODE  LICENSE_DATA  Makefile  README.md  README.rst  Water_Stability_Benchmark.ipynb  data analysis.ipynb  eunomia_edit4.csv  pyproject.toml  requirements.txt  temp.ipynb  tox.ini
.github/workflows/: pypi-publish.yml
Untracked/: demo_json.py
Untracked/Survey/: reviewer_ratings.csv  survey_figure.ipynb
Untracked/full_graph/: applications_filtered_v4.csv  neo4j_import.py  ws_final.csv
data/: README.md  demo.json
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/: ChemUnity_Extraction.ipynb  ChemUnity_Matching.ipynb  ChemUnity_Synthesis.ipynb  Cross_Document.ipynb
src/ChatGPT Comparison/: Task1_Predict.ipynb  Task2_Infer.ipynb  Task3_Recommend.ipynb  Task4_Retrieve.ipynb
src/Examples/: Example_KG.dump
src/Examples/KG_Data/: all_experimental_properties.csv  all_props.csv  applications.csv  filtered_applications.csv  filtered_experimental_properties.csv  filtered_props.csv  matching.csv  synthesis.csv  water_stability.csv  ws.csv
src/Examples/MD/10.1107_S010827010000617X/: 10.1107_S010827010000617X.md  10.1107_S010827010000617X_meta.json
src/Examples/MD/10.1107_S010827010200464X/: 10.1107_S010827010200464X.md  10.1107_S010827010200464X_meta.json
src/Examples/MD/10.1107_S010827010300595X/: 10.1107_S010827010300595X.md  10.1107_S010827010300595X_meta.json
src/Examples/MD/ACS/: ac8b00494.md
src/Examples/PDF/: 10.1039_a700472i.md  10.1039_a804945i.md
src/Examples/PDF/results/: matching.csv
src/Examples/XML/ACS/: ac8b00494.tei.xml
src/Examples/XML/Elsevier/: 10.1016_j.molstruc.2017.11.128.xml
src/Examples/XML/results/: matching.csv
src/Examples/vs/: synthesis_extractions.csv
src/Examples/vs/10.1016_j.molstruc.2017.11.128/: index.pkl
src/Examples/vs/10.1021_acs.analchem.8b00494/: index.pkl
src/Examples/vs/10.1039_a700472i/: index.faiss  index.pkl
src/Examples/vs/10.1039_a804945i/: index.faiss  index.pkl
src/Knowledge Graph Creation/: neo4j_import.py
src/KnowledgeGraph/: neo4j_import.py
src/MOF_ChemUnity/: Extraction_Prompts.py  Synthesis_Prompts.py  Water_Stability_Prompts.py  __init__.py
src/MOF_ChemUnity/Agents/: BaseAgent.py  ExtractionAgent.py  MatchingAgent.py  QueryAgent.py  test.ipynb
src/MOF_ChemUnity/Prompts/: Matching_Prompts.py  Query_Generation_Prompts.py  Synthesis_Prompts.py
src/MOF_ChemUnity/utils/: DataModels.py  DataPrep.py  DocProcessor.py  FilterTools.py  Filters.py  NeighbourFinder.py  XML_to_MD.py  cross_doc_utils.py  csd_dict.py
tests/: Benchmarks_Info.md  __init__.py  test_MOF_ChemUnity.py
tests/general_extraction_benchmark/: Density Ground Truth.csv  Ground Truth DOIs.csv  general_extraction_benchmark.csv  matching_benchmark_output.csv  synthesis_benchmark.csv
tests/general_extraction_benchmark/results/: all.csv  fil.csv
tests/general_extraction_benchmarks/: properties_benchmark.csv
tests/matching_benchmark/: matching_benchmark .csv
tests/water_stability_benchmark/: Water_stability_README.md  matching_benchmark .csv  properties_benchmark.csv  synthesis_benchmark.csv  water_stability_Ansari_benchmark_results.csv  ws.csv  ws24_benchmark_results.csv  ws_no_hallucination_slightly_bettter_prompt_hope_for_the_best.csv
(+6 files in other folders)
