[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MOF_ChemUnity"
version = "0.1.0"
description = "An LLM approach to append experimental properties to CoRE/QMOF computational."
readme = "README.rst"
authors = [
  {name = "Amro Aswad", email = "amro.aswad2a@gmail.com"}
]
maintainers = [
  {name = "Amro Aswad", email = "amro.aswad2a@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/AI4ChemS/MOF_ChemUnity/issues"
changelog = "https://github.com/AI4ChemS/MOF_ChemUnity/blob/master/changelog.md"
homepage = "https://github.com/AI4ChemS/MOF_ChemUnity"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

